--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start": "node app.js",
+    "build": "babel src -d dist"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +20,9 @@
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.22.15",
+    "@babel/core": "^7.22.20"
   }
 }
